<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Screen Addict</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_home">Home</string>
    <string name="menu_refresh">Refresh</string>

    <!-- String related to the Splash Screen -->
    <string name="splash_placeholder">SCREEN\nADDICT</string>
    <string name="spash_image_reminder">(An Image Will Go Here)</string>
    <string name="title_activity_home_screen">Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_search_results_tabbed">Search Results</string>
    <string name="title_movie_search_results">Movies</string>
    <string name="title_show_search_results">TV Shows</string>
    <string name="title_episode_results">Episodes</string>
    <string name="title_people_results">People</string>
    <string name="show_all">Show All&#8230;</string>
    
    <!-- Media List Content Description Strings -->
    <string name="content_description_poster">Poster/Primary image for the media item</string>
    <string name="content_description_more_info">Button for navigating to a "More Info" page for a media item, noted with !</string>
    <string name="content_description_watched">Button for marking a media item as "watched" in the user\'s library</string>
    <string name="content_description_add_to_collection">Button for adding a media item to the user\'s collection</string>
    <string name="content_description_add_to_watchlist">Button for adding a media item to the user\s watchlist</string>

</resources>
