<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/media_list_item_height">
    <ImageView
        android:id="@+id/media_list_item_image"
        android:layout_width="@dimen/media_list_item_poster_height"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description_poster">
    </ImageView>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView 
		    android:id="@+id/media_list_item_title"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/media_list_item_title_height"
		    android:gravity="center_vertical"
		    android:textStyle="bold|italic"
		    android:textSize="10pt"
		    android:textColor="@color/black"
		    android:singleLine="true" />
		<TextView
		    android:id="@+id/media_list_item_year"
		    android:layout_below="@+id/media_list_item_title"
		   	android:layout_width="match_parent"
		    android:layout_height="@dimen/media_list_item_year_height"
		    android:gravity="center_vertical"
		    android:textSize="6pt"
		    android:textColor="@color/black"	    
		    android:singleLine="true" />
		<LinearLayout 
		    android:layout_below="@+id/media_list_item_year"
		    android:orientation="horizontal"
		    android:layout_height="@dimen/media_list_item_action_buttons_height"
		    android:layout_width="match_parent"
		    android:gravity="right|center_vertical"
		    android:paddingRight="@dimen/media_list_item_action_buttons_padding"
			style="?android:attr/buttonBarButtonStyle">
		    <ImageButton
			    android:id="@+id/button_media_list_item_info"
			    android:layout_width="@dimen/media_list_item_button_width_height"
			    android:layout_height="@dimen/media_list_item_button_width_height"
			    android:padding="@dimen/media_list_item_button_padding"
			    android:src="@drawable/info_icon_black"
			    android:background="@drawable/media_list_item_custom_button_more_info"
			    android:scaleType="fitCenter"
			    android:onClick="HandleMediaListItemButtonClick"
			    style="?android:attr/buttonBarButtonStyle"
			    android:contentDescription="@string/content_description_more_info"
			     />
		    <ImageButton
			    android:id="@+id/button_media_list_item_watched"
			    android:layout_width="@dimen/media_list_item_button_width_height"
			    android:layout_height="@dimen/media_list_item_button_width_height"
	    	    android:padding="@dimen/media_list_item_button_padding"
			   	android:layout_marginLeft="@dimen/media_list_item_button_spacing"
			    android:src="@drawable/eye_icon_black"
			    android:background="@drawable/media_list_item_custom_button_watched"
			    android:scaleType="fitCenter"
			    android:onClick="HandleMediaListItemButtonClick"
			    android:contentDescription="@string/content_description_watched"
			    style="?android:attr/buttonBarButtonStyle"
			     />
		    <ImageButton
			    android:id="@+id/button_media_list_item_add_to_collection"
			    android:layout_width="@dimen/media_list_item_button_width_height"
			    android:layout_height="@dimen/media_list_item_button_width_height"
			    android:padding="@dimen/media_list_item_button_padding"
			    android:layout_marginLeft="@dimen/media_list_item_button_spacing"
			    android:src="@drawable/bookmark_icon_black"
			    android:background="@drawable/media_list_item_custom_button_add_to_collection"
			    android:scaleType="fitCenter"
			    android:onClick="HandleMediaListItemButtonClick"
			    android:contentDescription="@string/content_description_add_to_collection"
			    style="?android:attr/buttonBarButtonStyle"
			     />
		    <ImageButton
			    android:id="@+id/button_media_list_item_add_to_watchlist"
			    android:layout_width="@dimen/media_list_item_button_width_height"
			    android:layout_height="@dimen/media_list_item_button_width_height"
			    android:padding="@dimen/media_list_item_button_padding" 
			   	android:layout_marginLeft="@dimen/media_list_item_button_spacing"
			    android:src="@drawable/clipboard_icon_black"
			    android:background="@drawable/media_list_item_custom_button_add_to_watchlist"
   			    android:scaleType="fitCenter"
   			    android:onClick="HandleMediaListItemButtonClick"
   			    android:contentDescription="@string/content_description_add_to_watchlist"
			    style="?android:attr/buttonBarButtonStyle"
			     />
		    
		</LinearLayout>
		
    </RelativeLayout>
    
</LinearLayout>

